CR-2009-05-07-0: Enhancem.:  o ge_has_feature()
                               Added new feature test "additional-jvm-arguments"
                             o main menu now shows "interpreted system version"
                             o install_core_system test:
                               - use "additional-jvm-arguments" feature test
                               - also check shadowd configs
                               - also check correct testsuite system version
                                 checking
                             o get_version_info()
                               - now returns major, minor and update release
                                 version info 
                 Review:     DG

RH-2009-05-06-0: Enhancem:   Hedeby:
                             o test for issue 640 added
                             o new method hedeby_uninstall_managed_host
                 Review:     TB 

CR-2009-05-05-1: Bugfix:     o fixed wrong usage of set_config() and
                               set_config_and_propagater() in various tests
                 Enhancem.:  o added new testsuite test "test_framework"
                 Review:     SH            

RH-2009-05-05-0: Bugfix:     Hedeby: 
                             o file_permission test fixed and reworked
                             o parse_table_output ignores log messages of sdmadm commands
                             o global variable install_user removed from install test 
                 Review:     TB


RD-2009-05-05-0: Enhancem.:  improved througput test to use lesser CPU time
                             during measurement
                 Review:     CR

CR-2009-05-05-0: Bugfix:     o analyze_directory_structure()
                                Fixed problem when called by get_spooled_jobs()
                                and qmaster is removing job from spool directory
                                at the same time. (File not exists error)